--- a/NodeJS/public/views/home.html
+++ b/NodeJS/public/views/home.html
@@ -1,7 +1,7 @@
 <!-- public/views/home.html -->
 
 <div class="jumbotron text-center">
-    <h1>Home Page 4 Life</h1>
+    <h1>Welcome to the RBC Employee Giving Fundraising Tool</h1>
 
     <p>{{ tagline }}</p>
 </div>
