Updated Login and Register forms. Does not yet call REST webservice

--- a/NodeJS/public/views/Login.html
+++ b/NodeJS/public/views/Login.html
@@ -2,8 +2,8 @@
 
 <div class="jumbotron text-center" >
     <h1>Login</h1>
-    <label>UserID: <input type="text" placeholder="Enter UserID"></input></label><br>
-    <label>Password:<input type="password" placeholder="Enter Password"></label><br>
+    <label>UserID: <input type="text" placeholder="Enter UserID" ng-model="userID"></input></label><br>
+    <label>Password:<input type="password" placeholder="Enter Password" ng-model="password"></label><br>
     <label>User Name is: {{userID}}</label><br>
     <label>Password is: {{password}}</label><br>
 </div>
