--- a/NodeJS/public/views/Register.html
+++ b/NodeJS/public/views/Register.html
@@ -2,5 +2,13 @@
 
 <div class="jumbotron text-center">
     <h1>Registration</h1>
-    {{tagline}}
+    <label>UserID: <input type="text" ng-model="userid"></input></label><br>
+    <label>First Name:<input type="text" ng-model="firstname"></label><br>
+    <label>Last Name: <input type="text" ng-model="lastname"></input></label><br>
+    <label>Email:<input type="text" ng-model="email"></label><br>
+    <label>Password: <input type="password" ng-model="password"></input></label><br>
+    <label>Address L1:<input type="text" ng-model="addressL1"></label><br>
+    <label>Address L2: <input type="text" ng-model="addressL2"></input></label><br>
+    <label>Phone:<input type="text" ng-model="phone"></label><br>
+    <label>Comments: <input type="text" ng-model="comments"></input></label><br>
 </div>
