Added Login and Register webservices to controllers.

--- a/NodeJS/public/views/Login.html
+++ b/NodeJS/public/views/Login.html
@@ -6,4 +6,7 @@
     <label>Password:<input type="password" placeholder="Enter Password" ng-model="password"></label><br>
     <label>User Name is: {{userID}}</label><br>
     <label>Password is: {{password}}</label><br>
+    <input type="submit" id="submit" value="submit" ng-click="submit()"/>
+    <p>Debug: {{requestMsg}}</p>
+    <p>Success Message: {{message}}</p>
 </div>
