Added $cookies package. Updated Mainpage to ng-repeat against products

--- a/NodeJS/public/views/home.html
+++ b/NodeJS/public/views/home.html
@@ -3,5 +3,5 @@
 <div class="jumbotron text-center">
     <h1>Welcome to the RBC Employee Giving Fundraising Tool</h1>
 
-    <p>{{ tagline }}</p>
+    <p ng-repeat="product in products">{{ product }}</p>
 </div>
