--- a/NodeJS/public/views/Login.html
+++ b/NodeJS/public/views/Login.html
@@ -2,11 +2,11 @@
 
 <div class="jumbotron text-center" >
     <h1>Login</h1>
-    <label>UserID: <input type="text" placeholder="Enter UserID" ng-model="userID"></input></label><br>
-    <label>Password:<input type="password" placeholder="Enter Password" ng-model="password"></label><br>
-    <label>User Name is: {{userID}}</label><br>
-    <label>Password is: {{password}}</label><br>
+    <label>UserID: <input type="text" placeholder="Enter UserID" ng-model="user.userid"></input></label><br>
+    <label>Password:<input type="password" placeholder="Enter Password" ng-model="user.password"></label><br>
+    <label>User Name is: {{user.userid}}</label><br>
+    <label>Password is: {{user.password}}</label><br>
     <input type="submit" id="submit" value="submit" ng-click="submit()"/>
-    <p>Debug: {{requestMsg}}</p>
+    <p>Debug: {{user}}</p>
     <p>Success Message: {{message}}</p>
 </div>
