--- a/NodeJS/public/views/home.html
+++ b/NodeJS/public/views/home.html
@@ -1,13 +1,21 @@
 <!-- public/views/home.html -->
 
-<div class="jumbotron">
+<div>
     <h1>Welcome to the RBC Employee Giving Fundraising Tool</h1>
+    <br><br><br>
     <h2>Current Sales</h2>
-    <div class="col-md-6" ng-repeat="product in products">
-      <img class="icon" ng-src="{{product.image}}">
-      <h2 class="title">{{product.productname}}</h2>
-      <p class="description">{{product.productdescription}}</p>
-      <p class="price">{{product.price | currency}}</p>
+    <div class="row">
+      <div class="col-md-4" ng-repeat="product in products">
+        <!--<img class="icon" ng-src="{{product.image}}">
+        <h3 class="title">{{product.productname}}</h3>
+        <p class="description">{{product.productdescription}}</p>
+        <p class="price">{{product.price | currency}}</p>-->
+        <app-product info="product"></app-product>
+      </div>
+      <p>Current Product: {{currentProduct}}</p>
+      <p>Current User: {{currentUser}}</p>
     </div>
-    <h2>Upcoming</h2>
+    <!--<div class="row">
+      <h2>Upcoming</h2>
+    </div>-->
 </div>
