Added Product webservice calls + html. Fixed bug with extra header being sent as response

--- a/NodeJS/public/views/Register.html
+++ b/NodeJS/public/views/Register.html
@@ -11,6 +11,7 @@
     <label>Address L2: <input type="text" ng-model="user.addressL2"></input></label><br>
     <label>Phone:<input type="text" ng-model="user.phone"></label><br>
     <label>Comments: <input type="text" ng-model="user.comments"></input></label><br>
+    <p><a href="/Login" ng-click="login()">Already Registered? Login Here</a></p>
     <p>User JSON: {{user}}</p>
     <p>Success Message: {{message}}</p>
     <input type="submit" id="submit" value="submit" ng-click="submit()"/>
