Edited Login and Register pages. Added tables for better formatting

--- a/NodeJS/public/views/Login.html
+++ b/NodeJS/public/views/Login.html
@@ -1,9 +1,17 @@
 <!-- public/views/Login.html -->
 
-<div class="jumbotron text-center" >
+<div>
     <h1>Login</h1>
-    <label>UserID: <input type="text" placeholder="Enter UserID" ng-model="user.userid"></input></label><br>
-    <label>Password:<input type="password" placeholder="Enter Password" ng-model="user.password"></label><br>
+    <table>
+      <tr>
+        <td><label>UserID:</label></td>
+        <td><input type="text" placeholder="Enter UserID" ng-model="user.userid"></input></td>
+      </tr>
+      <tr>
+        <td><label>Password:</label></td>
+        <td><input type="password" placeholder="Enter Password" ng-model="user.password"></td>
+      </tr>
+    </table>
     <label>User Name is: {{user.userid}}</label><br>
     <label>Password is: {{user.password}}</label><br>
     <input type="submit" id="submit" value="submit" ng-click="submit()"/>
