--- a/NodeJS/public/views/Register.html
+++ b/NodeJS/public/views/Register.html
@@ -1,16 +1,45 @@
 <!-- public/views/home.html -->
 
-<div class="jumbotron text-center" >
+<div>
     <h1>Registration</h1>
-    <label>UserID: <input type="text" ng-model="user.userid"></input></label><br>
-    <label>First Name:<input type="text" ng-model="user.firstname"></label><br>
-    <label>Last Name: <input type="text" ng-model="user.lastname"></input></label><br>
-    <label>Email:<input type="text" ng-model="user.email"></label><br>
-    <label>Password: <input type="password" ng-model="user.password"></input></label><br>
-    <label>Address L1:<input type="text" ng-model="user.addressL1"></label><br>
-    <label>Address L2: <input type="text" ng-model="user.addressL2"></input></label><br>
-    <label>Phone:<input type="text" ng-model="user.phone"></label><br>
-    <label>Comments: <input type="text" ng-model="user.comments"></input></label><br>
+    <table>
+      <tr>
+        <td><label>UserID:</label></td>
+        <td><input type="text" ng-model="user.userid"></input></td>
+      </tr>
+      <tr>
+        <td><label>First Name:</label></td>
+        <td><input type="text" ng-model="user.firstname"></input></td>
+      </tr>
+      <tr>
+        <td><label>Last Name:</label></td>
+        <td><input type="text" ng-model="user.lastname"></input></td>
+      </tr>
+      <tr>
+        <td><label>Email:</label></td>
+        <td><input type="text" ng-model="user.email"></input></td>
+      </tr>
+      <tr>
+        <td><label>Password:</label></td>
+        <td><input type="password" ng-model="user.password"></input></td>
+      </tr>
+      <tr>
+        <td><label>Address L1:</label></td>
+        <td><input type="text" ng-model="user.addressL1"></input></td>
+      </tr>
+      <tr>
+        <td><label>Address L2:</label></td>
+        <td><input type="text" ng-model="user.addressL2"></input></td>
+      </tr>
+      <tr>
+        <td><label>Phone:</label></td>
+        <td><input type="text" ng-model="user.phone"></input></td>
+      </tr>
+      <tr>
+        <td><label>Comments:</label></td>
+        <td><input type="text" ng-model="user.comments"></input></td>
+      </tr>
+    </table>
     <p><a href="/Login" ng-click="login()">Already Registered? Login Here</a></p>
     <p>User JSON: {{user}}</p>
     <p>Success Message: {{message}}</p>
