--- a/NodeJS/public/views/Register.html
+++ b/NodeJS/public/views/Register.html
@@ -2,7 +2,7 @@
 
 <div>
     <h1>Registration</h1>
-    <table>
+    <table class="table">
       <tr>
         <td><label>UserID:</label></td>
         <td><input type="text" ng-model="user.userid"></input></td>
@@ -40,8 +40,11 @@
         <td><input type="text" ng-model="user.comments"></input></td>
       </tr>
     </table>
-    <p><a href="/Login" ng-click="login()">Already Registered? Login Here</a></p>
-    <p>User JSON: {{user}}</p>
-    <p>Success Message: {{message}}</p>
-    <input type="submit" id="submit" value="submit" ng-click="submit()"/>
+    <div class="row">
+      <p><a href="/Login" class="pull-left" ng-click="login()">Already Registered? Login Here</a></p>
+      <input type="submit" id="submit" value="submit" class="pull-right" ng-click="submit()"/>
+    </div>
+    <!--<p>User JSON: {{user}}</p>
+    <p>Success Message: {{message}}</p>-->
+
 </div>
