--- a/NodeJS/public/views/confirmPurchase.html
+++ b/NodeJS/public/views/confirmPurchase.html
@@ -14,6 +14,10 @@
           <td>{{currentProduct.productdescription}}</td>
         </tr>
         <tr>
+          <td>Product Owner:</td>
+          <td>{{currentProduct.ownerid}}</td>
+        </tr>
+        <tr>
           <td>Payment Instructions:</td>
           <td>{{currentProduct.paymentinstruction}}</td>
         </tr>
