--- a/NodeJS/public/css/styles.css
+++ b/NodeJS/public/css/styles.css
@@ -18,6 +18,6 @@ body {
    text-transform: lowercase;
 }
 
-.bottom-align {
-  vertical-align: bottom;
+.table>tbody>tr>td
+     vertical-align: middle;
 }
