Added Login Validation. Added Purchasing API. Added another window after confirming purchases to indicate success

--- a/NodeJS/public/views/Login.html
+++ b/NodeJS/public/views/Login.html
@@ -4,6 +4,9 @@
     <h1>Login</h1>
     <table class="table">
       <tr>
+        <p ng-if="message != ''" style="color:red">{{message}}</p>
+      </tr>
+      <tr>
         <td><label>UserID:</label></td>
         <td><input type="text" placeholder="Enter UserID" ng-model="user.userid"></input></td>
       </tr>
