Modified Purchase history. Added Sales history as a sidetable

--- a/NodeJS/public/views/Product.html
+++ b/NodeJS/public/views/Product.html
@@ -20,7 +20,7 @@
         </tr>
       <tr>
         <td><label>Expiry Date:</label></td>
-        <td><input type="password" ng-model="product.expirydate"></input></td>
+        <td><input type="text" ng-model="product.expirydate"></input></td>
       </tr>
       <tr>
         <td><label>Payment Instructions:</label></td>
