--- a/NodeJS/public/views/Product.html
+++ b/NodeJS/public/views/Product.html
@@ -20,7 +20,7 @@
         </tr>
       <tr>
         <td><label>Expiry Date:</label></td>
-        <td><input type="password" ng-model="product.expirydate"></input></td>
+        <td><input type="text" ng-model="product.expirydate"></input></td>
       </tr>
       <tr>
         <td><label>Payment Instructions:</label></td>
@@ -28,7 +28,17 @@
       </tr>
       <tr>
         <td><label>Image name:</label></td>
+        <td>
+          <select size="1" ng-model="product.image">
+          <option>DressDown.jpg</option>
+          <option>Samosa.png</option>
+          <option>Pizza.png</option>
+          <option>unitedway.png</option>
+        </select>
+       </td>
+        <!--
         <td><input type="text" ng-model="product.image"></input></td>
+      -->
       </tr>
     </table>
     <input type="submit" id="submit" value="submit" class="pull-right" ng-click="submit()"/>
