changed image names in product.html to fix link bug

--- a/NodeJS/public/views/Product.html
+++ b/NodeJS/public/views/Product.html
@@ -31,9 +31,9 @@
         <td>
           <select size="1" ng-model="product.image">
           <option>DressDown.jpg</option>
-          <option>Samosa.png</option>
-          <option>Pizza.png</option>
-          <option>unitedway.png</option>
+          <option>samosa.png</option>
+          <option>pizza.png</option>
+          <option>unitedWay.jpg</option>
         </select>
        </td>
         <!--
