Modified submit buttons to be capitalized.

--- a/NodeJS/public/views/Login.html
+++ b/NodeJS/public/views/Login.html
@@ -15,7 +15,7 @@
         <td><input type="password" placeholder="Enter Password" ng-model="user.password"></td>
       </tr>
     </table>
-    <input type="submit" id="submit" value="submit" class="pull-right" ng-click="submit()"/>
+    <input type="submit" id="submit" value="Submit" class="pull-right" ng-click="submit()"/>
     <!--<label>User Name is: {{user.userid}}</label><br>
     <label>Password is: {{user.password}}</label><br>
 
