--- a/NodeJS/public/views/Register.html
+++ b/NodeJS/public/views/Register.html
@@ -42,7 +42,7 @@
     </table>
     <div class="row">
       <p><a href="/Login" class="pull-left" ng-click="login()">Already Registered? Login Here</a></p>
-      <input type="submit" id="submit" value="submit" class="pull-right" ng-click="submit()"/>
+      <input type="submit" id="submit" value="Submit" class="pull-right" ng-click="submit()"/>
     </div>
     <!--<p>User JSON: {{user}}</p>
     <p>Success Message: {{message}}</p>-->
