--- a/NodeJS/public/views/confirmPurchase.html
+++ b/NodeJS/public/views/confirmPurchase.html
@@ -39,7 +39,7 @@
         </tr>
       </table>
       <div class="pull-right">
-          <input type="submit" id="submit" value="submit" ng-click="submitPurchase()"/>
+          <input type="submit" id="submit" value="Submit" ng-click="submitPurchase()"/>
       </div>
     </div>
   </div>
